--- a/frontend/src/main/frontend/src/app/navigation/layouts/vertical-navigation/navigation.html
+++ b/frontend/src/main/frontend/src/app/navigation/layouts/vertical-navigation/navigation.html
@@ -1,6 +1,6 @@
 <md-toolbar class="navigation-header md-whiteframe-1dp" layout="row" layout-align="space-between center">
     <div class="logo" layout="row" layout-align="start center">
-      <img src="http://www.ebm.org.br/wp-content/uploads/2017/03/Logotipo-e1491849684159.png" alt="">
+      <img src="assets/logos/ebm_110.png" height="50" width="50" alt="Versão do GitHub aqui?!">
         <span class="logo-text">EBM</span>
     </div>
 
