--- a/frontend/src/main/frontend/src/app/navigation/layouts/vertical-navigation/navigation.scss
+++ b/frontend/src/main/frontend/src/app/navigation/layouts/vertical-navigation/navigation.scss
@@ -16,7 +16,7 @@
 
             .logo-image {
                 display: block;
-                background: material-color('light-blue', '600');
+                // background: material-color('light-blue', '600');
                 width: 32px;
                 min-width: 32px;
                 height: 32px;
@@ -31,7 +31,7 @@
             .logo-text {
                 color: #FFFFFF;
                 margin-left: 16px;
-                font-size: 16px;
+                font-size: 20px;
             }
         }
 
