--- a/frontend/src/main/frontend/src/app/toolbar/layouts/vertical-navigation/toolbar.html
+++ b/frontend/src/main/frontend/src/app/toolbar/layouts/vertical-navigation/toolbar.html
@@ -28,7 +28,7 @@
                                      class="icon status s16">
                             </md-icon>
                         </div>
-                        <span class="username" hide show-gt-sm>John Doe</span>
+                        <span class="username" hide show-gt-sm>Usuário de Tal</span>
                         <md-icon md-font-icon="icon-chevron-down"
                                  class="icon s16" hide-xs></md-icon>
                     </div>
@@ -40,12 +40,12 @@
                         <md-button>My Profile</md-button>
                     </md-menu-item>
 
-                    <md-menu-item class="md-indent" ui-sref="app.mail">
+                    <!-- <md-menu-item class="md-indent" ui-sref="app.mail">
                         <md-icon md-font-icon="icon-email" class="icon"></md-icon>
                         <md-button>Inbox</md-button>
-                    </md-menu-item>
+                    </md-menu-item> -->
 
-                    <md-menu-item class="md-indent">
+                    <!-- <md-menu-item class="md-indent">
                         <md-icon md-font-icon ng-class="vm.userStatus.icon"
                                  ng-style="{'color': vm.userStatus.color }" class="icon"></md-icon>
                         <md-menu id="user-status-menu">
@@ -64,7 +64,7 @@
                                 </md-menu-item>
                             </md-menu-content>
                         </md-menu>
-                    </md-menu-item>
+                    </md-menu-item> -->
 
                     <md-menu-divider></md-menu-divider>
 
@@ -82,7 +82,7 @@
 
         <div class="toolbar-separator"></div>
 
-        <md-menu id="language-menu" md-offset="0 72" md-position-mode="target-right target">
+        <!-- <md-menu id="language-menu" md-offset="0 72" md-position-mode="target-right target">
             <md-button class="language-button" ng-click="$mdOpenMenu()"
                        aria-label="Language" md-menu-origin md-menu-align-target>
                 <div layout="row" layout-align="center center">
@@ -102,13 +102,13 @@
                     </md-button>
                 </md-menu-item>
             </md-menu-content>
-        </md-menu>
+        </md-menu> -->
 
-        <div class="toolbar-separator"></div>
+        <!-- <div class="toolbar-separator"></div> -->
 
-        <md-button id="quick-panel-toggle" class="md-icon-button" ng-click="vm.toggleSidenav('quick-panel')"
+        <!-- <md-button id="quick-panel-toggle" class="md-icon-button" ng-click="vm.toggleSidenav('quick-panel')"
                    aria-label="Toggle quick panel" translate translate-attr-aria-label="TOOLBAR.TOGGLE_QUICK_PANEL">
             <md-icon md-font-icon="icon-format-list-bulleted" class="icon"></md-icon>
-        </md-button>
+        </md-button> -->
     </div>
 </div>
