Usuario GET POST without popup

--- a/frontend/src/main/frontend/src/app/main/associado/associado.html
+++ b/frontend/src/main/frontend/src/app/main/associado/associado.html
@@ -8,7 +8,7 @@
     </md-card-header>
 
     <md-card-content>
-      [Listar usuários aqui.]
+      [Listar associados aqui.]
     </md-card-content>
   </md-card>
 
