--- a/frontend/src/main/frontend/src/app/main/contacts/dialogs/contact/contact-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/contacts/dialogs/contact/contact-dialog.html
@@ -115,9 +115,9 @@
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
-        <label>Melhor Dia (1 até 30)</label>
+        <label>Vencimento (1 até 30)</label>
         <md-icon md-font-icon="icon-calendar-select"></md-icon>
-        <input ng-model="vm.contact.melhorDia" type="number" min="1" max="30" required>
+        <input ng-model="vm.contact.vencAtual" type="number" min="1" max="30" required>
       </md-input-container>
 
       <!-- <div ng-if="!vm.allFields" layout="row" layout-align="center center">
