Parcial work on Informar Pagamento and Associado

--- a/frontend/src/main/frontend/src/app/main/contacts/contacts.html
+++ b/frontend/src/main/frontend/src/app/main/contacts/contacts.html
@@ -207,12 +207,14 @@
             {{contact.email}}
           </p>
 
+          <!-- Temporário -->
           <p class="hide show-gt-sm">
-            {{contact.formaPgto}}
+            Dinheiro
+            <!-- {{contact.formaPgto}} -->
           </p>
 
           <p class="hide show-gt-sm">
-            {{contact.valorAtual | currency}}
+            {{contact.valorAtual | currency : "R$ "}}
           </p>
 
           <div class="actions" layout="row" layout-align="start center">
