--- a/frontend/src/main/frontend/src/app/main/pagamento/pagamento.html
+++ b/frontend/src/main/frontend/src/app/main/pagamento/pagamento.html
@@ -1,3 +1,151 @@
-<h1>
-    Em construção.
-</h1>
+<div id="contacts" class="page-layout simple left-sidenav inner-sidenav">
+
+  <!-- HEADER -->
+  <div class="header md-accent-bg" layout="row" layout-align="space-between center">
+
+    <!-- APP TITLE -->
+    <div layout="row" layout-align="start center">
+      <!-- <md-button class="md-icon-button sidenav-toggle" hide-gt-md ng-click="vm.toggleSidenav('sidenav')">
+                <md-icon md-font-icon="icon-menu" class="icon"></md-icon>
+            </md-button> -->
+
+      <div class="logo" layout="row" layout-align="start center">
+        <span class="logo-icon">
+          <md-icon md-font-icon="icon-account-box" class="s24"></md-icon>
+        </span>
+        <span class="logo-text">Informar Pagamento</span>
+      </div>
+    </div>
+    <!-- / APP TITLE -->
+
+    <!-- SEARCH -->
+    <!-- <div class="search-input-wrapper" layout="row" layout-align="start center">
+      <label for="search">
+        <md-icon md-font-icon="icon-magnify"></md-icon>
+      </label>
+      <md-input-container md-no-float class="m-0">
+        <input id="search" placeholder="Pesquisar associados..." type="text" ng-model="vm.search">
+      </md-input-container>
+    </div> -->
+    <!-- / SEARCH -->
+
+  </div>
+  <!-- / HEADER -->
+
+  <!-- SELECTED BAR -->
+  <!-- <div ng-show="vm.selectedContacts.length > 0" class="selected-bar header animate-slide-down md-accent-bg" layout="row" layout-align="start center">
+
+    <div class="close-button-wrapper" ng-click="vm.selectedContacts =[]">
+      <md-button layout="row" layout-align="start center">
+        <md-icon md-font-icon="icon-arrow-left" class="mr-8"></md-icon>
+        <span>Voltar</span>
+      </md-button>
+    </div>
+
+    <div flex layout="row" layout-align="space-between center">
+
+      <div>
+        <span class="selected-contacts-count">
+        <span>{{vm.selectedContacts.length}}</span>
+        <span>selecionado(s)</span>
+        </span>
+
+        <md-menu class="select-menu" ng-if="!vm.currentThread">
+          <md-button class="md-icon-button" ng-click="$mdOpenMenu($event)" aria-label="multi select toggle">
+            <md-icon md-font-icon="icon-menu-down"></md-icon>
+          </md-button>
+          <md-menu-content width="3">
+            <md-menu-item>
+              <md-button ng-click="vm.selectAllContacts()">
+                Selecionar todos
+              </md-button>
+            </md-menu-item>
+            <md-menu-item>
+              <md-button ng-click="vm.deselectContacts()">
+                Selecionar nenhum
+              </md-button>
+            </md-menu-item>
+          </md-menu-content>
+        </md-menu>
+      </div>
+
+      <div class="multi-select-actions">
+        <md-button class="md-icon-button" ng-click="vm.deleteSelectedContacts($event)" aria-label="apagar selecionados">
+          <md-icon md-font-icon="icon-delete"></md-icon>
+        </md-button>
+      </div>
+
+    </div>
+
+  </div> -->
+  <!-- / SELECTED BAR -->
+
+  <!-- CONTENT -->
+  <div class="content" md-background-bg layout="row" layout-align="start start">
+
+    <!-- MAIN -->
+    <div class="main scrollable" ms-scroll>
+
+      <!-- ENTRADA DE PAGAMENTO -->
+      <form name="informaPgto">
+        <md-card>
+          <md-card-header>
+            <md-card-header-text>
+              <span class="md-title">Cadastro de Pagamentos</span>
+              <span class="md-subhead">Por favor, informe os dados referentes ao pagamento.</span>
+            </md-card-header-text>
+          </md-card-header>
+
+          <md-card-content>
+            <md-input-container>
+              <label>CPF do Associado</label>
+              <md-icon md-font-icon="icon-account-box"></md-icon>
+              <input ng-model="vm.pagamento.formaPgto.associado.cpf" type="text" mask="999.999.999-99" required>
+            </md-input-container>
+
+            <md-input-container>
+              <label>Valor Pago</label>
+              <md-icon md-font-icon="icon-currency-usd"></md-icon>
+              <input ng-model="vm.pagamento.valorPago" type="number" min="0" step="0.01" pattern="[0-9]{1,10}[.]{0,1}[0-9]{0,2}" required>
+            </md-input-container>
+
+            <md-input-container>
+              <md-datepicker ng-model="vm.pagamento.dataPgto" md-placeholder="Data de Pagamento" md-open-on-focus></md-datepicker>
+            </md-input-container>
+
+            <md-input-container>
+              <label>Forma de Pagamento</label>
+              <md-icon md-font-icon="icon-credit-card"></md-icon>
+              <md-select ng-model="vm.pagamento.formaPgto.formaPagamento">
+                <md-option value="Boleto">Boleto</md-option>
+                <md-option value="Cartão">Cartão</md-option>
+                <md-option value="Dinheiro">Dinheiro</md-option>
+              </md-select>
+            </md-input-container>
+
+          </md-card-content>
+        </md-card>
+
+        <div layout="row" layout-align="center">
+          <h4>Obs.: Todos os campos são obrigatórios.</h4>
+        </div>
+
+        <div layout="row" layout-align="center">
+          <md-button ng-click="vm.cadastrarPagamento()" class="md-accent md-raised">Cadastrar</md-button>
+          <md-button ng-click="vm.limpaForm()">Limpar</md-button>
+        </div>
+      </form>
+      <!-- / ENTRADA DE PAGAMENTO -->
+
+    </div>
+    <!-- / MAIN -->
+
+  </div>
+  <!-- / CONTENT -->
+
+  <!-- ADD CONTACT BUTTON -->
+  <!-- <md-button class="md-fab md-accent md-icon-button" id="add-contact-button" ng-click="vm.openContactDialog($event)" aria-label="Adicionar associado">
+    <md-icon md-font-icon="icon-account-plus"></md-icon>
+  </md-button> -->
+  <!-- / ADD CONTACT BUTTON -->
+</div>
