Added Usuario functional

--- a/frontend/src/main/frontend/src/app/main/usuario/dialogs/contact/usuario-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/usuario/dialogs/contact/usuario-dialog.html
@@ -7,7 +7,7 @@
     <!-- <md-toolbar class="md-accent" layout="column"> -->
 
     <!-- TOOLBAR TOP -->
-    <div class=" md-toolbar-tools md-toolbar-tools-top" layout="row" layout-align="space-between center">
+    <div class="md-toolbar-tools md-toolbar-tools-top" layout="row" layout-align="space-between center">
       <span class="title">{{vm.title}}</span>
       <md-button class="md-icon-button" ng-click="vm.closeDialog()" aria-label="Fechar diálogo">
         <md-icon md-font-icon="icon-close"></md-icon>
@@ -70,19 +70,13 @@
       <md-input-container class="md-icon-float md-block">
         <label>Nome</label>
         <md-icon md-font-icon="icon-account" class="name"></md-icon>
-        <input ng-model="vm.contact.nome" type="text" md-maxlength="80" required md-autofocus>
+        <input ng-model="vm.contact.nome" type="text" ng-disabled="!vm.newContact" md-maxlength="80" required md-autofocus>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
-        <label>CPF</label>
-        <md-icon></md-icon>
-        <input ng-model="vm.contact.cpf" type="text" mask="999.999.999-99" ng-disabled="!vm.newContact" required>
-      </md-input-container>
-
-      <md-input-container class="md-icon-float md-block">
-        <label>Celular</label>
-        <md-icon md-font-icon="icon-phone"></md-icon>
-        <input ng-model="vm.contact.celular" type="text" mask="(99) 9?9999-9999">
+        <label>Senha</label>
+        <md-icon md-font-icon="icon-key"></md-icon>
+        <input ng-model="vm.contact.senha" type="password" required>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
@@ -91,18 +85,29 @@
         <input ng-model="vm.contact.email" type="email">
       </md-input-container>
 
+      <md-input-container class="md-icon-float md-block">
+       <label>Setor</label>
+       <md-icon md-font-icon="icon-format-list-bulleted"></md-icon>
+       <md-select ng-model="vm.contact.setor" ng-model-options="{trackBy: '$value'}">
+         <md-option ng-value="fp" ng-repeat="fp in vm.listaSetores">
+           {{fp}}
+         </md-option>
+       </md-select>
+     </md-input-container>
+   </br> <!-- VERIFICAR ESSAS GAMBIARRAS COM </br> -->
+      <md-icon md-font-icon="icon-cog-box"></md-icon>
+      <label>Ativo?</label>
+      <md-input-container class="md-icon-float md-block">
+        <md-radio-group ng-model="vm.contact.ativo" required>
+          <md-radio-button value=true>Ativado</md-radio-button></br>
+          <md-radio-button value=false>Desativado</md-radio-button>
+        </md-radio-group>
+      </md-input-container>
       <!-- Desativado temporariamente -->
-      <!-- <md-input-container class="md-icon-float md-block">
-        <label>Forma de Pagamento</label>
-        <md-icon md-font-icon="icon-format-list-bulleted"></md-icon>
-        <md-select ng-model="vm.contact.formaPgto" ng-model-options="{trackBy: '$value'}">
-          <md-option ng-value="fp" ng-repeat="fp in vm.listaPgtos">
-            {{fp}}
-          </md-option>
-        </md-select>
-      </md-input-container> -->
+
 
       <!-- Este input só aparece se "Cartão" for selecionado no [md-select] acima: -->
+      <!--
       <md-input-container class="md-icon-float md-block" ng-if="vm.contact.formaPgto == 'Cartão'">
         <label>Número do Cartão (somente números)</label>
         <md-icon md-font-icon="icon-credit-card"></md-icon>
@@ -121,7 +126,7 @@
         <input ng-model="vm.contact.vencAtual" type="number" min="1" max="28" required>
         <div class="hint" ng-if="showHints">Dia de vencimento, de 1 até 28.</div>
       </md-input-container>
-
+    -->
       <!-- <div ng-if="!vm.allFields" layout="row" layout-align="center center">
                 <md-button class="md-accent" ng-click="vm.allFields = true" translate="CONTACTS.SHOW_ALL_FIELDS">Show
                     All Fields
@@ -190,8 +195,8 @@
           Salvar
         </md-button>
 
-        <md-button type="submit" ng-if="vm.newContact" ng-click="vm.addNewContact()" class="send-button md-accent md-raised" ng-disabled="contactForm.$invalid || contactForm.$pristine" aria-label="Adicionar associado">
-          Adicionar Associado
+        <md-button type="submit" ng-if="vm.newContact" ng-click="vm.addNewContact()" class="send-button md-accent md-raised" ng-disabled="contactForm.$invalid || contactForm.$pristine" aria-label="Adicionar usuário">
+          Adicionar Usuário
         </md-button>
 
       </div>
