Finalizing Informar Pagamento

--- a/frontend/src/main/frontend/src/app/core/scss/partials/print.scss
+++ b/frontend/src/main/frontend/src/app/core/scss/partials/print.scss
@@ -36,9 +36,9 @@
             display: none;
         }
 
-        #quick-panel {
-            display: none;
-        }
+        // #quick-panel {
+        //     display: none;
+        // }
 
         #content {
             position: relative !important;
