--- a/frontend/src/main/frontend/src/app/toolbar/toolbar.scss
+++ b/frontend/src/main/frontend/src/app/toolbar/toolbar.scss
@@ -67,12 +67,12 @@
         }
     }
 
-    #quick-panel-toggle {
-        width: $toolbarHeight;
-        height: $toolbarHeight;
-        margin: 0;
-        border-radius: 0;
-    }
+    // #quick-panel-toggle {
+    //     width: $toolbarHeight;
+    //     height: $toolbarHeight;
+    //     margin: 0;
+    //     border-radius: 0;
+    // }
 
     .toolbar-separator {
         height: $toolbarHeight;
