--- a/frontend/src/main/frontend/src/app/main/associados/dialogs/associado/associados-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/associados/dialogs/associado/associados-dialog.html
@@ -1,7 +1,7 @@
 <!-- DIALOG -->
-<md-dialog class="contact-dialog">
+<md-dialog class="associado-dialog">
 
-  <form name="contactForm" class="md-inline-form" novalidate>
+  <form name="ssociadoForm" class="md-inline-form" novalidate>
 
     <!-- DIALOG TOOLBAR -->
     <!-- <md-toolbar class="md-accent" layout="column"> -->
@@ -70,25 +70,25 @@
       <md-input-container class="md-icon-float md-block">
         <label>Nome</label>
         <md-icon md-font-icon="icon-account" class="name"></md-icon>
-        <input ng-model="vm.contact.nome" type="text" md-maxlength="80" required md-autofocus>
+        <input ng-model="vm.associado.nome" type="text" md-maxlength="80" required md-autofocus>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
         <label>CPF</label>
         <md-icon></md-icon>
-        <input ng-model="vm.contact.cpf" type="text" mask="999.999.999-99" ng-disabled="!vm.newContact" required>
+        <input ng-model="vm.associado.cpf" type="text" mask="999.999.999-99" ng-disabled="!vm.newAssociado" required>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
         <label>Celular</label>
         <md-icon md-font-icon="icon-phone"></md-icon>
-        <input ng-model="vm.contact.celular" type="text" mask="(99) 9?9999-9999">
+        <input ng-model="vm.associado.celular" type="text" mask="(99) 9?9999-9999">
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
         <label>E-mail</label>
         <md-icon md-font-icon="icon-email"></md-icon>
-        <input ng-model="vm.contact.email" type="email">
+        <input ng-model="vm.associado.email" type="email">
       </md-input-container>
 
       <!-- Desativado temporariamente -->
@@ -103,22 +103,22 @@
       </md-input-container> -->
 
       <!-- Este input só aparece se "Cartão" for selecionado no [md-select] acima: -->
-      <md-input-container class="md-icon-float md-block" ng-if="vm.contact.formaPgto == 'Cartão'">
+      <md-input-container class="md-icon-float md-block" ng-if="vm.associado.formaPgto == 'Cartão'">
         <label>Número do Cartão (somente números)</label>
         <md-icon md-font-icon="icon-credit-card"></md-icon>
-        <input ng-model="vm.contact.cartao.numero" type="number" md-maxlength="16">
+        <input ng-model="vm.associado.cartao.numero" type="number" md-maxlength="16">
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
         <label>Valor Mensal (em reais)</label>
         <md-icon md-font-icon="icon-currency-usd"></md-icon>
-        <input ng-model="vm.contact.valorAtual" type="number" min="0" step="0.01" pattern="[0-9]{1,10}[.]{0,1}[0-9]{0,2}" required>
+        <input ng-model="vm.associado.valorAtual" type="number" min="0" step="0.01" pattern="[0-9]{1,10}[.]{0,1}[0-9]{0,2}" required>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
         <label>Vencimento</label>
         <md-icon md-font-icon="icon-calendar-select"></md-icon>
-        <input ng-model="vm.contact.vencAtual" type="number" min="1" max="28" required>
+        <input ng-model="vm.associado.vencAtual" type="number" min="1" max="28" required>
         <div class="hint" ng-if="showHints">Dia de vencimento, de 1 até 28.</div>
       </md-input-container>
 
@@ -186,18 +186,18 @@
     <!-- DIALOG ACTIONS -->
     <md-dialog-actions layout="row" layout-align="space-between center">
       <div layout="row" layout-align="start center">
-        <md-button type="submit" ng-if="!vm.newContact" ng-click="vm.saveContact()" class="send-button md-accent md-raised" ng-disabled="contactForm.$invalid || contactForm.$pristine" aria-label="Salvar">
+        <md-button type="submit" ng-if="!vm.newAssociado" ng-click="vm.saveAssociado()" class="send-button md-accent md-raised" ng-disabled="ssociadoForm.$invalid || ssociadoForm.$pristine" aria-label="Salvar">
           Salvar
         </md-button>
 
-        <md-button type="submit" ng-if="vm.newContact" ng-click="vm.addNewContact()" class="send-button md-accent md-raised" ng-disabled="contactForm.$invalid || contactForm.$pristine" aria-label="Adicionar associado">
+        <md-button type="submit" ng-if="vm.newAssociado" ng-click="vm.addNewAssociado()" class="send-button md-accent md-raised" ng-disabled="ssociadoForm.$invalid || contactForm.$pristine" aria-label="Adicionar associado">
           Adicionar Associado
         </md-button>
 
       </div>
 
-      <div ng-if="!vm.newContact" layout="row">
-        <md-button class="md-icon-button" ng-click="vm.deleteContactConfirm($event)" aria-label="Apagar">
+      <div ng-if="!vm.newAssociado" layout="row">
+        <md-button class="md-icon-button" ng-click="vm.deleteAssociadoConfirm($event)" aria-label="Apagar">
           <md-icon md-font-icon="icon-delete"></md-icon>
           <md-tooltip><span>Apagar</span></md-tooltip>
         </md-button>
