Added all menus frontend

--- a/frontend/src/main/frontend/src/app/main/usuario/usuario.html
+++ b/frontend/src/main/frontend/src/app/main/usuario/usuario.html
@@ -11,7 +11,7 @@
 
       <div class="logo" layout="row" layout-align="start center">
         <span class="logo-icon">
-          <md-icon md-font-icon="icon-account-circle" class="s24"></md-icon>
+          <md-icon md-font-icon="icon-worker" class="s24"></md-icon>
         </span>
         <span class="logo-text">Usuários</span>
       </div>
