--- a/frontend/src/main/frontend/src/app/main/relatorio/relatorio.html
+++ b/frontend/src/main/frontend/src/app/main/relatorio/relatorio.html
@@ -1,13 +1,182 @@
-<div id="maintenance" class="flex-scrollable" layout="column" ms-scroll>
-    <div id="maintenance-form-wrapper" layout="column" layout-align="center center">
-        <div id="maintenance-form" class="md-whiteframe-8dp">
-            <div class="logo md-accent-bg">
-                <span>E</span>
-            </div>
-            <div class="title">Estamos trabalhando nessa página!</div>
-            <div class="subtitle">
-                Logo estará pronta. <br> Por favor olhe mais tarde.
-            </div>
-        </div>
+<div id="contacts" class="page-layout simple left-sidenav inner-sidenav">
+
+  <!-- HEADER -->
+  <div class="header md-accent-bg" layout="row" layout-align="space-between center">
+
+    <!-- APP TITLE -->
+    <div layout="row" layout-align="start center">
+      <!-- <md-button class="md-icon-button sidenav-toggle" hide-gt-md ng-click="vm.toggleSidenav('sidenav')">
+                <md-icon md-font-icon="icon-menu" class="icon"></md-icon>
+            </md-button> -->
+
+      <div class="logo" layout="row" layout-align="start center">
+        <span class="logo-icon">
+          <md-icon md-font-icon="icon-document" class="s24"></md-icon>
+        </span>
+        <span class="logo-text">Relatório Financeiro</span>
+      </div>
     </div>
+    <!-- / APP TITLE -->
+
+    <!-- SEARCH -->
+    <!-- <div class="search-input-wrapper" layout="row" layout-align="start center">
+      <label for="search">
+        <md-icon md-font-icon="icon-magnify"></md-icon>
+      </label>
+      <md-input-container md-no-float class="m-0">
+        <input id="search" placeholder="Pesquisar associados..." type="text" ng-model="vm.search">
+      </md-input-container>
+    </div> -->
+    <!-- / SEARCH -->
+
+  </div>
+  <!-- / HEADER -->
+
+  <!-- SELECTED BAR -->
+  <!-- <div ng-show="vm.selectedContacts.length > 0" class="selected-bar header animate-slide-down md-accent-bg" layout="row" layout-align="start center">
+
+    <div class="close-button-wrapper" ng-click="vm.selectedContacts =[]">
+      <md-button layout="row" layout-align="start center">
+        <md-icon md-font-icon="icon-arrow-left" class="mr-8"></md-icon>
+        <span>Voltar</span>
+      </md-button>
+    </div>
+
+    <div flex layout="row" layout-align="space-between center">
+
+      <div>
+        <span class="selected-contacts-count">
+        <span>{{vm.selectedContacts.length}}</span>
+        <span>selecionado(s)</span>
+        </span>
+
+        <md-menu class="select-menu" ng-if="!vm.currentThread">
+          <md-button class="md-icon-button" ng-click="$mdOpenMenu($event)" aria-label="multi select toggle">
+            <md-icon md-font-icon="icon-menu-down"></md-icon>
+          </md-button>
+          <md-menu-content width="3">
+            <md-menu-item>
+              <md-button ng-click="vm.selectAllContacts()">
+                Selecionar todos
+              </md-button>
+            </md-menu-item>
+            <md-menu-item>
+              <md-button ng-click="vm.deselectContacts()">
+                Selecionar nenhum
+              </md-button>
+            </md-menu-item>
+          </md-menu-content>
+        </md-menu>
+      </div>
+
+      <div class="multi-select-actions">
+        <md-button class="md-icon-button" ng-click="vm.deleteSelectedContacts($event)" aria-label="apagar selecionados">
+          <md-icon md-font-icon="icon-delete"></md-icon>
+        </md-button>
+      </div>
+
+    </div>
+
+  </div> -->
+  <!-- / SELECTED BAR -->
+
+  <!-- CONTENT -->
+  <div class="content" md-background-bg layout="row" layout-align="start start">
+
+    <!-- MAIN -->
+    <div class="main scrollable" ms-scroll>
+
+      <!-- ENTRADA DE PAGAMENTO -->
+      <form name="informaPgto">
+        <md-card>
+          <md-card-header>
+            <md-card-header-text>
+              <span class="md-title">Consulta de Pagamentos</span></br>
+              <span class="md-subhead">Por favor, informe os dados referentes a consulta desejada.</span>
+            </md-card-header-text>
+          </md-card-header>
+
+          <md-card-content>
+            <md-input-container>
+              <label>CPF do Associado</label>
+              <md-icon md-font-icon="icon-account-box"></md-icon>
+              <input ng-blur="vm.buscaCpf()" ng-model="vm.cpf" type="text" mask="999.999.999-99" required>
+            </md-input-container>
+
+            <md-input-container>
+              <md-datepicker ng-model="vm.dataInicio" md-placeholder="Data Inicio" md-open-on-focus></md-datepicker>
+            </md-input-container>
+
+            <md-input-container>
+              <md-datepicker ng-model="vm.dataFim" md-placeholder="Data Fim" md-open-on-focus></md-datepicker>
+            </md-input-container>
+
+          </md-card-content>
+        </md-card>
+
+        <div layout="row" layout-align="center">
+          <h4>Obs.: Todos os campos são obrigatórios.</h4>
+        </div>
+
+        <div layout="row" layout-align="center">
+          <md-button ng-click="vm.buscaPagamentos(vm.cpf, vm.dataInicio, vm.dataFim)" class="md-accent md-raised">Consultar</md-button>
+          <md-button ng-click="vm.limpaForm()">Limpar</md-button>
+        </div>
+      </form>
+      <!-- / ENTRADA DE PAGAMENTO -->
+
+      <form name="informaPgto">
+        <md-card ng-hide="!vm.pagamentos"> <!-- Esconde tabela caso pagamentos for vazio -->
+          <md-card-header>
+            <md-card-header-text>
+              <span class="md-title">Associado</span></br>
+              <span class="md-subhead">{{vm.pagamentos[0].cpf}}</span> </br>
+              <span class="md-subhead">{{vm.pagamentos[0].nome}}</span> </br>
+
+
+
+              <div class="simple-table-container md-whiteframe-4dp">
+                <div class="table-title">
+                  Pagamentos:
+                </div>
+
+                <table class="simple" ms-responsive-table>
+                  <thead>
+                    <tr>
+                      <th></th>
+                      <th ng-repeat="pagamento in vm.pagamentos">{{pagamento.mes}}</th>
+                      <th>Total</th>
+                    </tr>
+                  </thead>
+
+                  <tbody>
+                    <tr>
+                      <td>Data</td>
+                      <td ng-repeat="pagamento in vm.pagamentos">{{pagamento.dataPag | date: 'dd/MM/yyyy'}}</td>
+                    </tr>
+                    <tr>
+                      <td>Valor</td>
+                      <td ng-repeat="pagamento in vm.pagamentos">{{pagamento.valor | currency:"R$":2}}</td>
+                      <td>{{vm.total | currency:"R$":2}}</td>
+                    </tr>
+                  </tbody>
+                </table>
+            </div>
+
+
+          </md-card-header-text>
+        </md-card-header>
+      </md-card>
+    </form>
+
+</div>
+    <!-- / MAIN -->
+</div>
+  <!-- / CONTENT -->
+
+  <!-- ADD CONTACT BUTTON -->
+  <!-- <md-button class="md-fab md-accent md-icon-button" id="add-contact-button" ng-click="vm.openContactDialog($event)" aria-label="Adicionar associado">
+    <md-icon md-font-icon="icon-account-plus"></md-icon>
+  </md-button> -->
+  <!-- / ADD CONTACT BUTTON -->
 </div>
